# hugo_converter

./: FFT.py  FFT_overdensity.py  Gaussian_testing.py  Heff30to66_Tvir40to49_withJamesion_hist_withpkzre2.npy  Plotting functions.ipynb  README.md  __init__.py  b_mz.npy  kvalues.npy  plot_params.py  presentation.ipynb  project_driver.py  setup.cfg  statistical_analysis.py  tested_things.py  token.txt  visualization.py  z_re_field.py  z_reion_comparison.py
cache_fields/: Heff10to100_Tvir25to50_varstudy.npy  Heff10to60_Tvir35to55_varstudy.npy  Heff15to45_Tvir40to49_varstudy.npy  Heff25to52_Tvir38to47_varstudy_withzreionbt.npy  Heff25to52_Tvir38to47_varstudy_withzreionbt_withJamesparams.npy  bmz_errors.npy  kvalues.npy  test_array2x2.npy
data/2D_var_study/: 2D_parameter_space_study_HEFF_25to52_Tvir_40to49.npy  2D_parameter_space_study_HEFF_25to52_Tvir_40to49_with_mean.npy  Heff10to60_Tvir35to85_varstudy.npy  Heff15to45_Tvir40to49_varstudy_withbt.npy  Heff25to52_Tvir38to47_Jamesparamsonly.npy  Heff25to52_Tvir38to47_varstudy.npy  Heff25to52_Tvir38to47_varstudy_cleanbt.npy  Heff25to52_Tvir38to47_varstudy_cleanbt_withJamesparams.npy  Heff25to52_Tvir38to47_varstudy_withzreionbt_143dim.npy  Heff25to52_Tvir38to47_varstudy_withzreionbt_withJamesion_hist_nobt.npy  (+4 more)
docs/: README.md  presentation.ipynb
figures/: Plotting functions.ipynb  README.md
hugo_converter/: project_driver.py  statistical_analysis.py  tested_things.py  z_reion_comparison.py
hugo_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_modules.py
(+2 files in other folders)
