
[metadata]
name = hugo_converter
description = A package to find z-reion's linear bias free parameters value based on 21cmFAST physical parameters inputs or density fields.
long_description = file: README.md
long_description_content_type = text
url = https://github.com/hugo-baraer/EoR_research
author = Hugo Baraer
author_email = hugo.baraer@mail.mcgill.ca
license = MIT
platforms = MAC OS or Linux

[options]
packages = find:
install_requires =
    astropy
    astropy-healpix
    corner
    emcee
    imageio
    matplotlib
    numpy
    pyfftw
    powerbox
    scipy
    tqdm
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
